js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromElvis/main/test.kt
fun test(): Int {
    try {
        return foo() ?: bar()
    } catch (e: Error) {
        return 1
    }
}
